# slib

./: .gitignore  CMakeLists.txt  LICENSE
include/slib/: list.h  utils.h
src/: list.c
tests/: CMakeLists.txt  list_test.cc  simple_test.c  test_utils.h
